Dodana predloga za prijavo

--- a/nadlogar/naloge/templates/landing_page.html
+++ b/nadlogar/naloge/templates/landing_page.html
@@ -32,7 +32,7 @@
 {% block vsebina %}
 <div class="container" style="background: #ffffff;">
 
-    <div class="row mb-5" style="min-height: 75vh;">
+    <div class="row" style="min-height: 75vh;">
         <div class="col-md-6 d-flex justify-content-center align-items-center order-1">
             
             <div class="branding branding-padding">
@@ -52,5 +52,13 @@
         </div>
     </div>
 
+</div>
+
+<div class="container">
+    <div class="main-references text-center">
+        <div class="main-reference"><a class="text-muted" href="http://kje-je-kaj-v-slovnici.franček.si" target="_blank">Kje je kaj v slovnici?</a></div>
+        <div class="main-reference"><a class="text-muted" href="https://www.fran.si/" target="_blank">Fran</a></div>
+        <div class="main-reference"><a class="text-muted" href="http://svetovalnica.franček.si" target="_blank">Jezikovna svetovalnica</a></div>
+    </div>
 </div>
 {% endblock %}
