--- a/nadlogar/naloge/templates/footer.html
+++ b/nadlogar/naloge/templates/footer.html
@@ -1,5 +1,5 @@
 {% load static %}
-<footer class="bg-light">
+<footer class="bg-light mt-3">
     <div class="container">
             <div class="d-flex justify-content-between">
 
