--- a/nadlogar/naloge/templates/testi/urejanje_dokumenta.html
+++ b/nadlogar/naloge/templates/testi/urejanje_dokumenta.html
@@ -121,7 +121,7 @@
                 </button>
             </div>
 
-            <form action="{% url 'naloge:dodaj_nalogo' delovni_list.id %}" method="post">
+            <form action="{% url 'naloge:uredi_nalogo' delovni_list.id %}" method="post" id="uredi-nalogo">
                 {% csrf_token %}
                 <div class="modal-body" id="uredi-nalogo-form">
 
