--- a/nadlogar/naloge/templates/naloge/naloga.html
+++ b/nadlogar/naloge/templates/naloge/naloga.html
@@ -34,9 +34,7 @@
         </div>
     </form>
 
-    <div class="primeri">
-        {{ naloga.generator_nalog | naloga_v_html }}
-    </div>
+    {{ naloga | naloga_v_html }}
 
     <div class="uredi-nalogo-obrazec" style="display: none;">
         {{ naloga | naloga_urejanje_obrazec | crispy }}
