--- a/nadlogar/naloge/templates/testi/podrobnosti_dokumenta.html
+++ b/nadlogar/naloge/templates/testi/podrobnosti_dokumenta.html
@@ -18,7 +18,11 @@
                     <i class="material-icons material-icons-button">create</i>
                     Uredi
                 </a>
-                <a class="btn btn-sm btn-primary" href="{% url 'naloge:generiraj_delovni_list' delovni_list.id %}">
+                <button class="btn btn-sm btn-primary" data-toggle="modal" data-target="#odstrani-dokument-popup">
+                    <i class="material-icons material-icons-button">delete_forever</i>
+                    Izbriši
+                </button>
+                <a class="btn btn-sm btn-primary mt-0 mt-md-1" href="{% url 'naloge:generiraj_delovni_list' delovni_list.id %}">
                     <i class="material-icons material-icons-button">get_app</i>
                     Prenesi
                 </a>
@@ -35,5 +39,29 @@
         {% endfor %}
     </div>
 
+</div>
+
+<div class="modal fade" id="odstrani-dokument-popup" tabindex="-1" role="dialog" aria-labelledby="odstrani-dokument-naslov" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content">
+
+            <div class="modal-header">
+                <h4 class="modal-title" id="odstrani-dokument-naslov">Odstranjevanje dokumenta</h4>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+
+            <div class="modal-body">
+                <p>Ste prepričani, da želite odstraniti ta delovni list?</p>
+                <p>Skupaj z dokumentom bodo izbrisane tudi vse njegove naloge. Tega dejanja ni mogoče razveljaviti.</p>
+            </div>
+
+            <div class="modal-footer">
+                <button type="button" class="btn btn-light" data-dismiss="modal">Prekliči</button>
+                <a href="{% url 'naloge:odstranjevanje_delovnega_lista' delovni_list.id %}" class="btn btn-danger">Izbriši delovni list</a>
+            </div>
+        </div>
+    </div>
 </div>
 {% endblock %}
