--- a/nadlogar/naloge/templates/testi/seznam_dokumentov.html
+++ b/nadlogar/naloge/templates/testi/seznam_dokumentov.html
@@ -18,6 +18,17 @@
     </div>
     <p>Spodaj si lahko ogledate delovne liste, ki ste jih ustvarili.</p>
 
+    {% if messages %}
+        {% for message in messages %}
+            <div class="alert alert-primary alert-dismissible fade show" role="alert">
+                {{ message }}
+                <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+        {% endfor %}
+    {% endif %}
+
     <ul class="list-group">
         {% for delovni_list in delovni_listi %}
             <a href="{% url 'naloge:podrobnosti_delovnega_lista' delovni_list.id %}" class="list-group-item list-group-item-action">
