--- a/nadlogar/naloge/templates/naloge/naloga.html
+++ b/nadlogar/naloge/templates/naloge/naloga.html
@@ -4,7 +4,7 @@
 
 <div class="naloga">
 
-    <form action="{% url 'naloge:uredi_nalogo' delovni_list.id %}" method="post" class="uredi-nalogo">
+    <form action="{% url 'naloge:uredi_nalogo' %}" method="post" class="uredi-nalogo">
         {% csrf_token %}
         <input type="hidden" name="naloga_id" value="{{ naloga.id }}">
         <input type="hidden" name="" value="{{ naloga.id }}">
@@ -41,7 +41,7 @@
     </div>
 
     <div class="text-center">
-        <form action="{% url 'naloge:uredi_nalogo' delovni_list.id %}" method="post" class="uredi-nalogo">
+        <form action="{% url 'naloge:uredi_nalogo' %}" method="post" class="uredi-nalogo">
             {% csrf_token %}
             <input type="hidden" name="naloga_id" value="{{ naloga.id }}">
             <input type="hidden" name="action" value="dodaj_primer">
